# simple-django

./: .env.template  .gitignore  gunicorn_config.py  manage.py  pyproject.toml  simple-dj.service
login/templates/login/: index.html
simple_dj/: asgi.py  settings.py  urls.py  wsgi.py
simple_dj/settings/: base.py  local.py  production.py
