[tool.poetry]
name = "simple_dj"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Django = "3.1.4"
python-dotenv = "^0.15.0"
django-allauth = "^0.44.0"
gunicorn = "^20.0.4"
uwsgi = "^2.0.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
